Estilizacion del navbar con css

--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recetas.com</title>
+    <link rel="stylesheet" href="../css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fasthand&family=Source+Code+Pro:ital,wght@1,300;1,600;1,800&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
-        <div class="logo"></div>
-        <div class="buscador"></div>
+    <header class="top">
+        <div class="logo">
+            <a href=""><img src="../css/assets/icon/chef-svgrepo-com.svg" alt=""></a>
+            <a class="title-logo" href="">Rica Cocina</a>
+        </div>
+        <div class="buscador">
+            <a href=""><img class="lupa" src="../css/assets/icon/search.png" alt=""></a>
+  
+            <div class="buscador-input"><input type="search"></div>
+        </div>  
+        <div class="login-user">
+            <a href=""><img src="../css/assets/icon/usuario.png" alt=""></a>
+        </div>
     </header>
     <div class="atajos">
         <ul>
