--- a/html/index.html
+++ b/html/index.html
@@ -754,8 +754,10 @@
 <!-- CONSEJOS DE COCINA -->
     <div>
         <div class="main-content" >
-            <p></p><a class="main-content-title" href="">Consejos de Cocina</a></p>
-            <ul>
+            <p><a class="main-content-title" href="">Consejos de Cocina</a></p>
+
+            
+             <ul class="list-grid">
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
@@ -763,11 +765,14 @@
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-            </ul>
+                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
+             </ul>
+            
         </div>
         <div class="main-content">
             <p><a class="main-content-title" href=""> Actualidad Gastronomica</a></p>
-            <ul>
+            <ul class="list-grid">
+                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
@@ -779,7 +784,7 @@
         </div>
         <div class="main-content">
             <p><a class="main-content-title" href=""> Utencilios de Cocina</p></a>
-            <ul>
+            <ul class="list-grid">
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
                 <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
@@ -793,7 +798,7 @@
 
     <div class="main-content">
         <p><a class="main-content-title" href=""> Recetas por Categoría</p></a>
-        <div>
+        <div class="container-icon-card">
             <a href="">
                 <img src="" alt="">
                 <p>Postres y dulces</p>
@@ -809,6 +814,48 @@
             <a href="">
                 <img src="" alt="">
                 <p>Ensaladas</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>Pures</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>Carne de res</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>carne de pollo</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>pescado</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>Legumbres</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>Aperitivos</p>
+            </a>
+        </div>
+        <div>
+            <a href="">
+                <img src="" alt="">
+                <p>Salsas y Guarniciones</p>
             </a>
         </div>
         <div>
