--- a/html/index.html
+++ b/html/index.html
@@ -39,8 +39,8 @@
     <section>
         <div class="section-top">
             <a href=""><h1>¿Sabías que...?</h1></a>
-            <h2>30 datos curiosos sobre alimentación que tal vez no conocías:</h2>
-            <p>Para disfrutar de la vida comiendo, ¡primero tienes que conocer lo que comes! Por eso proponemos descubrir algunas curiosidades que te dejarán con la boca abierta sobre los alimentos: propiedades beneficiosas, formas de cocinar, alternativas saludables...</p>
+            <!-- <h2>30 datos curiosos sobre alimentación que tal vez no conocías:</h2> -->
+            <p>Para disfrutar de la vida comiendo, ¡primero tienes que conocer lo que comes! Por eso proponemos descubrir algunas curiosidades que te dejarán con la boca abierta sobre los alimentos: propiedades beneficiosas, formas de cocinar y alternativas saludables...</p>
             <div class="arrow-right">
                <a href=""> <img src="../css/assets/icon/right-arrow (1).png" alt=""></a>
             </div>
@@ -756,17 +756,50 @@
         <div class="main-content" >
             <p><a class="main-content-title" href="">Consejos de Cocina</a></p>
 
-            
-             <ul class="list-grid">
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-                <li><a href="">Cómo hacer arroz blanco perfecto</a></li>
-             </ul>
+            <div class="list-grid">
+
+                <div class="tip-1">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-2">
+                    <a  href="">APRENDE A CONTROLAR EL FUEGO</a> 
+                </div>
+
+                <div class="tip-3">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-4">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-5">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-6">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-7">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+
+                <div class="tip-8">
+                    <a  href="">Cómo hacer arroz blanco perfecto</a> 
+                </div>
+            </div>
+             <!-- <ul class="list-grid">
+                <li><a class="tip-1" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-2" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a  class="tip-3" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-4" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-5" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-6" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-7" href="">Cómo hacer arroz blanco perfecto</a></li>
+                <li><a class="tip-8" href="">Cómo hacer arroz blanco perfecto</a></li>
+             </ul> -->
             
         </div>
         <div class="main-content">
